refator : ChatMessageResponse 구조 변경